<resources>
    <string name="app_name">SMARTPHONE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtUser">USER</string>
    <string name="txtPassword">PASSWORD</string>
    <string name="btnAccedi">ACCEDI</string>
    <string name="btnRegLog">REGISTRATI</string>
    <string name="btnRegSend">INVIA</string>


    <string name="title_activity_registrazione">RegistrazioneActivity</string>
    <string name="txtSecondaPsw">PASSWORD</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtNumeroIscrizione">NUMERO ISCRIZIONE</string>
    <string name="txtAnnoIscrizione">ANNO ISCRIZIONE</string>
    <string name="txtRegistrati">REGISTRATI</string>
</resources>
