<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.charlie.danielearace.smartphone.RegistrazioneActivity"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txt_email"
        android:text="@string/txtEmail"
        android:hint="@string/txtEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txt_numero_iscrizione"
        android:text="@string/txtNumeroIscrizione"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/txt_email"
        android:layout_alignStart="@+id/txt_email"
        android:hint="@string/txtNumeroIscrizione" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txt_anno_iscrizione"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/txt_numero_iscrizione"
        android:layout_alignStart="@+id/txt_numero_iscrizione"
        android:text="@string/txtAnnoIscrizione"
        android:hint="@string/txtAnnoIscrizione" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spn_provincia"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txt_anno_iscrizione"
        android:layout_alignEnd="@+id/txt_anno_iscrizione" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_psw_reg"
        android:layout_marginTop="46dp"
        android:text="@string/txtPassword"
        android:layout_below="@+id/spn_provincia"
        android:layout_alignStart="@+id/spn_provincia" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegSend"
        android:id="@+id/but_reg"
        android:layout_below="@+id/txt_psw_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

</RelativeLayout>
